--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,25 +1,20 @@
-<% if @article.errors.any? %>
-  <h2>Please fix the following errors to submit form:</h2>
-  <uL>
-    <% @article.errors.full_messages.each do |msg| %>
-      <li><%= msg %></li>
-    <% end %>
-  <ul>
-<% end %>
+<%= render 'shared/errors' %>
 
-<%= form_with(model: @article, local: true) do |f| %>
+<div class="container">
+  <%= form_with(model: @article, local: true) do |f| %>
+    <div class="form-group">
+      <%= f.label :title %>
+      <%= f.text_field :title, class: "form-control" %>
+    </div>
+    <div class="form-group">
+      <%= f.label :description %>
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
+    <p>
+      <%= f.submit class: "btn btn-outline-success btn-lg" %>
+    </p>
+  <% end %>
   <p>
-    <%= f.label :title %><br/>
-    <%= f.text_field :title %>
+    <%= link_to 'Return to Listings', articles_path, class: "btn btn-outline-dark" %>
   </p>
-
-  <p>
-    <%= f.label :description %><br/>
-    <%= f.text_area :description %>
-  </p>
-
-  <p>
-    <%= f.submit %>
-  </p>
-
-<% end %>
+</div>
