--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,6 @@
-<h1>Edit Article</h1>
+<div id="page-content">
+  <h1 class="text-center mt-4">Edit Article</h1>
 
-<%= render 'form' %>
+  <%= render 'form' %>
 
-<%= link_to 'Return to Listings', articles_path %>
+</div>
