--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,27 @@
-<h1>Article Listing Page</h1>
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3">Actions</th>
-    </tr>
-  </thead>
-  <tbody>
+<div id="page-content">
+  <h1 class="text-center mt-4">Article Listing</h1>
+
+  <div class="container">
     <% @articles.each do |article| %>
-      <tr>
-        <td><%= article.title %></td>
-        <td><%= article.description %></td>
-        <td><%= link_to 'Show', article_path(article) %>
-        <td><%= link_to 'Edit', edit_article_path(article) %>
-        <td><%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" } %></td>
-      </tr>
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-header font-italic">
+              by Hunter King
+            </div>
+            <div class="card-body">
+              <h5 class="card-title"><%= link_to article.title, article_path(article), class: "text-success" %></h5>
+              <p class="card-text"><%= truncate(article.description, length: 100) %></p>
+              <%= link_to 'View', article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to 'Edit', edit_article_path(article), class: "btn btn-outline-success" %>
+              <%= link_to 'Delete', article_path(article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+            </div>
+            <div class="card-footer text-muted">
+              <small>created <%= time_ago_in_words(article.created_at)%>, edited <%= time_ago_in_words(article.updated_at) %></small>
+            </div>
+          </div>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-<br/>
-<%= link_to 'Create new article', new_article_path %>
-<br/>
-<%= link_to 'Homepage', root_path %>
+  </div>
+</div>
