--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,18 @@
-<h1>Article Details</h1>
-<p><strong>Title: </strong><%= @article.title %></p>
-<p><strong>Description: </strong><%= @article.description %></p>
+<h1 class="text-center">Article Details</h1>
 
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" } %> |
-<%= link_to 'Return to Listings', articles_path %>
+  <div class="container">
+      <div class="row justify-content-md-center">
+        <div class="col-8 mt-4">
+          <div class="card text-center shadow mb-5 bg-white rounded">
+            <div class="card-body">
+              <h5 class="card-title"><%= @article.title %></p></h5>
+              <p class="card-text"><%= @article.description %></p>
+              <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
+              <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+              <br/><%= link_to 'Return to Listings', articles_path, class: "mt-1 btn btn-outline-dark" %>
+            </div>
+          </div>
+        </div>
+      </div>
+  </div>
+</div>
