--- a/app/views/layouts/_messages.html.erb
+++ b/app/views/layouts/_messages.html.erb
@@ -1,3 +1,8 @@
-    <% flash.each do |name, msg| %>
-      <%= msg %>
-    <% end %>
+<% flash.each do |name, msg| %>
+  <div class="container alert alert-success alert-dismissible fade show">
+    <%= msg %>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  </div>
+<% end %>
