--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,20 @@
 <h1 class="text-center">Article Details</h1>
 
-  <div class="container">
-      <div class="row justify-content-md-center">
-        <div class="col-8 mt-4">
-          <div class="card text-center shadow mb-5 bg-white rounded">
-            <div class="card-body">
-              <h5 class="card-title"><%= @article.title %></p></h5>
-              <p class="card-text"><%= @article.description %></p>
-              <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
-              <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
-            </div>
-          </div>
+<div class="container">
+  <div class="row justify-content-md-center">
+    <div class="col-8 mt-4">
+      <div class="card-header text-center font-italic">
+        by <%= @article.user.username %>
+      </div>
+      <div class="card text-center shadow mb-5 bg-white rounded">
+        <div class="card-body">
+          <h5 class="card-title"><%= @article.title %></p></h5>
+          <p class="card-text"><%= @article.description %></p>
+          <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
+          <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
         </div>
       </div>
-      <br/><%= link_to 'Return to Listings', articles_path, class: "mt-1 btn btn-outline-dark" %>
+    </div>
   </div>
+  <br/><%= link_to 'Return to Listings', articles_path, class: "mt-1 btn btn-outline-dark" %>
 </div>
