--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,8 +1,8 @@
-<% if @article.errors.any? %>
+<% if obj.errors.any? %>
   <div class="container alert alert-danger alert-dismissible fade show">
     <h2 class="alert">Please fix the following errors to submit form:</h2>
     <uL>
-      <% @article.errors.full_messages.each do |msg| %>
+      <% obj.errors.full_messages.each do |msg| %>
         <li class="alert"><%= msg %></li>
       <% end %>
     <ul>
