--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -45,3 +45,46 @@ html, body {
 #sticky-footer {
   flex-shrink: none;
 }
+
+/* pagination styling */
+.flickr_pagination {
+  text-align: center;
+  padding: 0.3em;
+  cursor: default;
+}
+  .flickr_pagination a, .flickr_pagination span, .flickr_pagination em {
+    padding: 0.2em 0.5em; 
+    border-radius: 5px;
+  }
+  .flickr_pagination .disabled {
+    color: #aaaaaa;
+  }
+  .flickr_pagination .current {
+    border: .75px solid black;
+    font-style: normal;
+    font-weight: bold;
+    color: black;
+  }
+  .flickr_pagination a {
+    border: .75px solid darkgray;
+    color: whitesmoke;
+    text-decoration: none;
+  }
+    .flickr_pagination a:hover, .flickr_pagination a:focus {
+      border-color: grey;
+      background: whitesmoke;
+      color: grey;
+    }
+  .flickr_pagination .page_info {
+    color: #aaaaaa;
+    padding-top: 0.8em;
+  }
+  .flickr_pagination .previous_page, .flickr_pagination .next_page {
+    border-width: 1px;
+  }
+  .flickr_pagination .previous_page {
+    margin-right: 1em;
+  }
+  .flickr_pagination .next_page {
+    margin-left: 1em;
+  }
