--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -5,6 +5,7 @@
     <div class="col-8 mt-4">
       <div class="card-header text-center font-italic">
         by <%= @article.user.username %>
+        <%= link_to gravatar_for(@article.user), user_path(@article.user) %>
       </div>
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-body">
