--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,8 +11,10 @@
         <div class="card-body">
           <h5 class="card-title"><%= @article.title %></p></h5>
           <p class="card-text"><%= @article.description %></p>
-          <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
-          <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+          <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
+            <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-success" %>
+            <%= link_to 'Delete', article_path(@article), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+          <% end %>
         </div>
       </div>
     </div>
