--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,7 @@
 <h1 class="text-center mt-4">Edit Your Profile</h1>
+
 <%= render 'form' %>
+
+<button class="btn btn-outline-danger btn-lg">
+  <%= link_to 'Delete Profile', user_path(@user), method: :delete, data: { confirm: "Are you sure you want to delete your profile?",  }  %>
+</button>
